butterknife 注解使用，及如何自定义注解

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TodayInfomation</string>
+    <string name="str_main_shanghai">上海</string>
+    <string name="str_main_hangzhou">杭州</string>
 </resources>
