--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="str_main_beijing">北京</string>
     <string name="str_main_hangzhou">杭州</string>
     <string name="str_main_shenzhen">深圳</string>
+    <string name="bottom_show_behavior">com.yoyozhangh.github.todayinfomation.main.fragment.hangzhou.design.BottomShowBehavior</string>
 </resources>
